# homeworkBot

./: .gitignore  Cargo.toml  README.md  flake.nix
assets/: assignment_get.excalidraw.md  assignment_set.excalidraw.md  diagram.excalidraw.md
src/: conversation.rs  lib.rs  main.rs  storage.rs  telegram.rs
