[package]
name = "homeworkbot"
version = "1.0.0-beta"
edition = "2021"

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
color-eyre = "0.6.2"
frankenstein = { version = "0.30.4", features = ["async-http-client"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary
